--- a/django_rpx/templates/django_rpx/rpx_link.html
+++ b/django_rpx/templates/django_rpx/rpx_link.html
@@ -1,4 +1,4 @@
 <a class="rpxnow" onclick="return false;"
-   href="https://{{ realm }}.rpxnow.com/openid/v2/signin?token_url={{ token_url }}">
+   href="https://{{ realm }}.rpxnow.com/openid/v2/signin?token_url={{token_url }}{{ extra }}">
    {{ text }}
 </a>
