Added registering new user handling and barebones register template.html. NOTE: Does not handle association with existing username yet.

--- a/django_rpx/templates/django_rpx/login.html
+++ b/django_rpx/templates/django_rpx/login.html
@@ -45,13 +45,13 @@
     have:
     </p>
 
-    {% rpx_embed "?next=/accounts/register/" %}
+    {% rpx_embed "?next=/accounts/profile/" %}
     
     <p id="login_link">
-    Or, {% rpx_link "click here to login via the popup widget" "?next=/accounts/register/" %}.
+    Or, {% rpx_link "click here to login via the popup widget" "?next=/accounts/profile/" %}.
     </p>
 {% endblock %}
 
 {% block bodyend %}
-    {% rpx_script "?next=/accounts/register/" %}
+    {% rpx_script "?next=/accounts/profile/" %}
 {% endblock %}
