Associating new users with existing accounts now works.

--- a/django_rpx/templates/django_rpx/register.html
+++ b/django_rpx/templates/django_rpx/register.html
@@ -86,10 +86,6 @@
     </form>
     
     <p id="login_link">
-    Or, <a href="">associate this account with an existing username</a>.
+    Or, <a href="{% url auth_associate %}">associate this account with an existing username</a>.
     </p>
-{% endblock %}
-
-{% block bodyend %}
-    {% rpx_script "?next=/accounts/register/" %}
 {% endblock %}
