Added ability to include RPXNOW.flags in rpx_script header. Good use case would be to specify the flag 'show_provider_list' so that all providers are shown even if user is logged in.

--- a/django_rpx/templates/django_rpx/rpx_script.html
+++ b/django_rpx/templates/django_rpx/rpx_script.html
@@ -5,4 +5,5 @@
   RPXNOW.realm = "{{ realm }}";
   RPXNOW.overlay = true;
   RPXNOW.language_preference = 'en';
+  RPXNOW.flags = '{{ flags }}';
 </script>
