Changed how 'extra' params to templatetags are handled. They now accept a dictionary and create the url with urlencode. This is better since the params are automatically escaped.

--- a/django_rpx/templates/django_rpx/login.html
+++ b/django_rpx/templates/django_rpx/login.html
@@ -45,13 +45,13 @@
     have:
     </p>
 
-    {% rpx_embed next %}
+    {% rpx_embed extra %}
     
     <p id="login_link">
-    Or, {% rpx_link "click here to login via the popup widget" next %}.
+    Or, {% rpx_link "click here to login via the popup widget" extra %}.
     </p>
 {% endblock %}
 
 {% block bodyend %}
-    {% rpx_script next %}
+    {% rpx_script extra %}
 {% endblock %}
