--- a/django_rpx/templates/django_rpx/associate_instructions.html
+++ b/django_rpx/templates/django_rpx/associate_instructions.html
@@ -42,6 +42,6 @@
     with an existing account:
     </p>
     
-    {% rpx_embed "?next=/accounts/associate/" %}
+    {% rpx_embed extra %}
 
 {% endblock %}
