--- a/django_rpx/templates/django_rpx/login.html
+++ b/django_rpx/templates/django_rpx/login.html
@@ -1,5 +1,5 @@
 {% extends "django_rpx/base.html" %}
-{% load rpx_tags %}
+{% load rpx %}
 
 {% block bodyid %}login{% endblock %}
 {% block title %}Login or Signup{% endblock %}
