Removed profile view and template. (Should be handled by user) Fixed some templates to load 'rpx' instead of 'rpx_tags'

--- a/django_rpx/templates/django_rpx/register.html
+++ b/django_rpx/templates/django_rpx/register.html
@@ -1,5 +1,5 @@
 {% extends "django_rpx/base.html" %}
-{% load rpx_tags %}
+{% load rpx %}
 
 {% block bodyid %}register{% endblock %}
 {% block title %}Register New User{% endblock %}
