--- a/django_rpx/templates/django_rpx/associate.html
+++ b/django_rpx/templates/django_rpx/associate.html
@@ -1,5 +1,5 @@
 {% extends "django_rpx/base.html" %}
-{% load rpx_tags %}
+{% load rpx %}
 
 {% block bodyid %}associate{% endblock %}
 {% block title %}Associate a New Login{% endblock %}
