--- a/example/static/sass/screen.sass
+++ b/example/static/sass/screen.sass
@@ -4,37 +4,95 @@
 @import partials/base.sass
 // Import all the default blueprint modules so that we can access their mixins.
 @import blueprint
-// Import the non-default scaffolding module.
-@import blueprint/modules/scaffolding.sass
 
-// To generate css equivalent to the blueprint css but with your configuration applied, uncomment:
-// +blueprint
+//My imports:
+//@import compass/utilities/general.sass
+//@import compass/utilities/text.sass
+//@import compass/utilities/links.sass
+//@import compass/utilities/lists.sass
+//@import compass/utilities/tables.sass
+//@import compass/layout.sass
 
-//Recommended Blueprint configuration with scoping and semantic layout:
-+blueprint-typography("body.bp")
-+blueprint-scaffolding("body.bp")
-body.bp
-  +blueprint-utilities
-  +blueprint-debug
-  +blueprint-interaction
-  // Remove the scaffolding when you're ready to start doing visual design.
-  // Or leave it in if you're happy with how blueprint looks out-of-the-box
-form.bp
-  +blueprint-form
+//We use this with the new messages framework.
+=messages-style
+  font-size: 0.9em
+  //Should be same as header margin-bottom:
+  margin-top: 5px
+  margin-bottom: 5px
+  ul
+    //Inside makes the bullet points "inside" the li container.
+    list-style-position: inside
+    margin: 0
+    li
+      padding: 3px 20px 2px
+      margin-bottom: 4px
+    .success
+      background-color: #cfc
+      //border: 2px solid #ada
+    .error
+      background-color: #fdd
+      //border: 2px solid #eaa
+      //color: #c44
+    .info
+      background-color: #adf
+      //border: 1px solid #3b4d7f
 
-// Page layout can be done using mixins applied to your semantic classes and IDs:
-body.three-col
+body
+  //Default font-size:
+  font-size: 1.1em
+  font-family: Georgia, Times, Times New Roman, sans-serif
+
   #container
-    +container
+    //+container
+  #messages
+    +messages-style 
+
+  //#header
+  //  margin-top: 10px
+  //  margin-bottom: 10px
+  //  text-align: right
+  //  h1
+  //    margin-left: 5px
+  //    font-size: 1.2em
+  //    float: left
+  //    margin-bottom: 0
+  //    //Hackish method of correcting blueprint set line-height:
+  //    line-height: 1.5
+  //    a
+  //      color: #333
+  //      text-decoration: none
+  //      .supple
+  //        color: #555
+  //#content
+  //  padding: 5px
+
+  //#footer
+  //  margin-top: 20px
+
+  //  text-align: right
+  //  font-size: 0.6em
+  //  font-family: Georgia, Times, Times New Roman, sans-serif
+  //  color: #aaa
+  //  a
+  //    color: #aaa
+
+body#login
+  background: #ccc
   #header, #footer
-    +column(!blueprint_grid_columns)
-  #sidebar
-    // One third of the grid columns, rounding down. With 24 cols, this is 8.
-    !sidebar_columns = floor(!blueprint_grid_columns / 3)
-    +column(!sidebar_columns)
+    display: none
   #content
-    // Two thirds of the grid columns, rounding up.
-    // With 24 cols, this is 16.
-    !content_columns = ceil(2 * !blueprint_grid_columns / 3)
-    // true means it's the last column in the row
-    +column(!content_columns, true)
+    #login_box
+      margin: 0 auto
+      padding: 20px
+      width: 400px
+      border: 2px solid #999
+      background: #fff
+      text-align: center
+      h2
+        font-size: 1.8em
+        margin-bottom: 10px
+        a
+          color: #333
+          text-decoration: none
+      #messages
+        margin-top: 10px
