--- a/example/static/sass/screen.sass
+++ b/example/static/sass/screen.sass
@@ -105,7 +105,7 @@ body
   //  a
   //    color: #aaa
 
-body#login
+body#login, body#logged_out
   background: #ccc
   #header, #footer
     display: none
