--- a/example/static/sass/screen.sass
+++ b/example/static/sass/screen.sass
@@ -154,3 +154,36 @@ body#profile
             font-family: Georgia, Times, Times New Roman, sans-serif
             font-size: 1.0em
             padding: 7px 10px
+
+body#associate
+  #container
+    width: 450px
+  #content
+    #associated_logins
+      font-size: 0.9em
+      p.helper
+        margin-bottom: 15px
+        text-align: center
+      dl
+        margin-bottom: 10px
+        dt
+          float: left
+          width: 70px
+          text-align: right
+          margin-right: 10px
+          //Push down label for text input
+          margin-top: 5px
+        dd
+          input[type=text]
+            width: 300px
+            font-size: 0.9em
+            padding: 4px 5px
+          a
+            font-size: 0.7em
+    #add_login
+      text-align: center
+      margin-top: 15px
+      p
+        margin-bottom: 0
+      p.helper
+        font-size: 0.8em
