--- a/example/static/css/screen.css
+++ b/example/static/css/screen.css
@@ -37,15 +37,17 @@ body#login #content #login_box h2, body#logged_out #content #login_box h2 { font
 body#login #content #login_box h2 a, body#logged_out #content #login_box h2 a { color: #333; text-decoration: none; }
 body#login #content #login_box #messages, body#logged_out #content #login_box #messages { margin-top: 10px; }
 
-body#profile #container { width: 450px; }
-body#profile #content #user_information p.helper { margin-bottom: 15px; text-align: center; }
-body#profile #content #user_information form#profile_form .errorlist { text-align: center; padding-top: 5px; padding-bottom: 4px; background-color: #c44; font-weight: bold; color: white; margin-left: 0; margin-bottom: 5px; width: 100%; font-size: 0.8em; background-color: #fdd; color: #c44; }
-body#profile #content #user_information form#profile_form .errorlist li { list-style-type: none; margin-left: 0px; }
-body#profile #content #user_information form#profile_form p { margin-bottom: 10px; }
-body#profile #content #user_information form#profile_form label { font-size: 0.90em; font-weight: bold; display: block; }
-body#profile #content #user_information form#profile_form input[type=text] { width: 435px; font-size: 1.2em; padding: 4px 5px; }
-body#profile #content #user_information form#profile_form .actions { text-align: right; }
-body#profile #content #user_information form#profile_form .actions button { font-family: Georgia, Times, Times New Roman, sans-serif; font-size: 1.0em; padding: 7px 10px; }
+body#profile #container, body#register #container { width: 450px; }
+body#profile #content p.helper, body#register #content p.helper { margin-bottom: 15px; text-align: center; }
+body#profile #content form .errorlist, body#register #content form .errorlist { text-align: center; padding-top: 5px; padding-bottom: 4px; background-color: #c44; font-weight: bold; color: white; margin-left: 0; margin-bottom: 5px; width: 100%; font-size: 0.8em; background-color: #fdd; color: #c44; }
+body#profile #content form .errorlist li, body#register #content form .errorlist li { list-style-type: none; margin-left: 0px; }
+body#profile #content form p, body#register #content form p { margin-bottom: 10px; }
+body#profile #content form label, body#register #content form label { font-size: 0.90em; font-weight: bold; display: block; }
+body#profile #content form input[type=text], body#register #content form input[type=text] { width: 435px; font-size: 1.2em; padding: 4px 5px; }
+body#profile #content form .actions, body#register #content form .actions { text-align: right; }
+body#profile #content form .actions button, body#register #content form .actions button { font-family: Georgia, Times, Times New Roman, sans-serif; font-size: 1.0em; padding: 7px 10px; }
+body#profile #content #associate_helper, body#register #content #associate_helper { color: #555; margin-top: 35px; text-align: center; }
+body#profile #content #associate_helper small, body#register #content #associate_helper small { display: block; font-size: 0.8em; }
 
 body#associate #container { width: 450px; }
 body#associate #content #associated_logins { font-size: 0.9em; }
@@ -57,3 +59,16 @@ body#associate #content #associated_logins dl dd a { font-size: 0.7em; }
 body#associate #content #add_login { text-align: center; margin-top: 15px; }
 body#associate #content #add_login p { margin-bottom: 0; }
 body#associate #content #add_login p.helper { font-size: 0.8em; }
+
+body#register2 #container { width: 450px; }
+body#register2 #content form#register_form { display: block; margin: 0 auto; margin-top: 20px; }
+body#register2 #content form#register_form p.helper { margin-bottom: 15px; text-align: center; font-size: 0.9em; }
+body#register2 #content form#register_form .field { clear: left; margin-bottom: 15px; padding-top: 10px; }
+body#register2 #content form#register_form .field .errorlist { text-align: center; padding-top: 5px; padding-bottom: 4px; background-color: #c44; font-weight: bold; color: white; margin-left: 0; margin-bottom: 5px; width: 100%; font-size: 0.8em; background-color: #fdd; color: #c44; }
+body#register2 #content form#register_form .field .errorlist li { list-style-type: none; margin-left: 0px; }
+body#register2 #content form#register_form .field label { float: left; margin-right: 16px; width: 120px; text-align: right; font-size: 0.9em; padding-top: 8px; }
+body#register2 #content form#register_form .field input[type=text] { font-size: 1.0em; width: 350px; padding: 5px; }
+body#register2 #content form#register_form .field input#id_subdomain { width: 200px; text-align: right; }
+body#register2 #content form#register_form .field #subdomain-input-helper { font-size: 1.4em; }
+body#register2 #content form#register_form .field input#id_title { width: 380px; }
+body#register2 #content form#register_form button { display: block; margin-top: 20px; margin-left: auto; margin-right: 8pxThe Case For An Older Woman; font-family: Georgia, Times, Times New Roman, sans-serif; font-size: 1.2em; padding-top: 5px; padding-bottom: 5px; width: 150px; }
