Closes #21: Passing language_code to iframe. Added RPX_LANGUAGE_PREFERENCE as a setting option. Clarified docs about extra param.

--- a/src/django_rpx_plus/templates/django_rpx_plus/rpx_script.html
+++ b/src/django_rpx_plus/templates/django_rpx_plus/rpx_script.html
@@ -3,6 +3,6 @@
     RPXNOW.token_url = "{{ token_url }}";
     RPXNOW.realm = "{{ realm }}";
     RPXNOW.overlay = true;
-    RPXNOW.language_preference = 'en';
+    RPXNOW.language_preference = '{{ language_preference }}';
     RPXNOW.flags = '{{ flags }}';
 </script>
